--- a/style.css
+++ b/style.css
@@ -1,49 +1,63 @@
 /* 背景色 */
 body {
-  background-color: #f5f5f5;
-  color: #333333;
-  font-family: 'Yu Gothic', 'メイリオ', sans-serif;
+    background-color: #f5f5f5;
+    color: #333333;
+    font-family: 'Yu Gothic', 'メイリオ', sans-serif;
 }
 
 /* リンクの色 */
 a {
-  color: #ff9800;
-  text-decoration: none;
+    color: #ff9800;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 /* ヘッダー */
 header {
-  background-color: #ff9800;
-  color: #ffffff;
-  padding: 10px;
-  text-align: center;
-  font-size: 1.5em;
+    background-color: #ff9800;
+    color: #ffffff;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5em;
 }
 
 /* フッター */
 footer {
-  background-color: #333333;
-  color: #ffffff;
-  padding: 10px;
-  text-align: center;
-  margin-top: 20px;
+    background-color: #333333;
+    color: #ffffff;
+    padding: 10px;
+    text-align: center;
+    margin-top: 20px;
 }
 
 /* 記事リストのスタイル */
 ul {
-  list-style-type: none;
-  padding: 0;
+    list-style-type: none;
+    padding: 0;
 }
 
 ul li {
-  margin: 10px 0;
+    margin: 10px 0;
 }
 
 ul li a {
-  font-size: 1.2em;
-  font-weight: bold;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+/* 記事リストのスタイル */
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    margin: 10px 0;
+}
+
+ul li a {
+    font-size: 1.2em;
+    font-weight: bold;
 }
