--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* 背景色 */
+/* 背景色とフォント */
 body {
     background-color: #f5f5f5;
     color: #333333;
@@ -47,17 +47,15 @@ ul li a {
     font-size: 1.2em;
     font-weight: bold;
 }
-/* 記事リストのスタイル */
-ul {
-    list-style-type: none;
-    padding: 0;
-}
 
-ul li {
-    margin: 10px 0;
-}
-
-ul li a {
-    font-size: 1.2em;
+/* 見出しスタイル */
+h1 {
+    font-size: 2rem;
     font-weight: bold;
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
